@@ -1,3 +1,11 @@
+2003-01-30  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* doc/tkTable.n:        add -ellipsis tag /global option which
+	* tests/tkTable.test:   takes a char string (ie: "...") to display
+	* generic/tkTableTag.c: as an ellipsis.  These will only be shown
+	* generic/tkTable.h:    on non-wrapping, non-multiline cells.
+	* generic/tkTable.c: 
+
 2002-12-10  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tests/tkTable.test:
